<resources>
	<string name="app_name">Well Tracking App</string>
	<string name="collection_user">user</string>
	<string name="collection_report">report</string>
	<string name="collection_well">well</string>
	<string name="txt_placeholder_name">Nama personal</string>
	<string name="txt_placeholder_email">personalemail@email.com</string>
	<string name="txt_placeholder_role">User</string>
	<string name="txt_placeholder_date">Selasa, 01 Januari 2024, 00:00</string>
	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="txt_not_found">Data tidak ada</string>
	<string name="txt_title_account">Akun Anda</string>
	<string name="img_btn_desc">This is button description and mantap</string>
	<string name="txt_min">-</string>
	<string name="txt_about_application">Tentang Aplikasi</string>
	<string name="txt_close">Tutup</string>
	<string name="txt_next">Lanjutkan</string>
	<string name="txt_placeholder_reset_password">Instruksi untuk mengatur ulang kata sandi akan dikirimkan ke email perso@email.com</string>
	<string name="title_reset_password">Mengatur Ulang Kata Sandi</string>
	<string name="txt_title_about_app">Tentang Aplikasi</string>
	<string name="txt_title_update_private_fragment">Perbarui Nama</string>
	<string name="txt_placeholder_password">Kata sandi</string>
	<string name="txt_save">simpan</string>
	<string name="current_name">Nama sekarang</string>
	<string name="input_new_name">Masukkan nama baru</string>
	<string name="new_name">Nama baru</string>
	<string name="title_splash_1">Mengoptimalkan Kinerja Sumur Migas dengan Aplikasi Well Tracking</string>
	<string name="sub_title_splash_1">Pantau Kondisi Sumur secara Real-Time untuk Efisiensi Operasional Maksimal. Dapatkan Laporan Kondisi Sumur yang Terperinci, Analisis Proaktif, dan Pemahaman yang Mendalam untuk Membimbing Keputusan Strategis dalam Pengelolaan Sumur Migas</string>
	<string name="title_splash_2">Inovasi Terkini dengan Aplikasi Well Tracking untuk Industri Migas</string>
	<string name="sub_title_splash_2">Laporan Kondisi Sumur yang Akurat dan Cepat untuk Pengelolaan Sumber Daya yang Lebih Baik. Manfaatkan Analisis Terkini, Integrasi Data yang Mulus, dan Visualisasi Informatif untuk Meningkatkan Pengawasan dan Keefektifan Operasional dalam Industri Migas</string>
	<string name="title_splash_3">Pandangan Mendalam Aplikasi Well Tracking Medco untuk Pemantauan Sumur yang Presisi</string>
	<string name="sub_title_splash_3">Integrasi Data dan Analisis Mendalam untuk Keputusan yang Lebih Cerdas dalam Pengelolaan Sumur Migas. Evaluasi Performa dan Solusi Berbasis Data untuk Meningkatkan Produktivitas dan Keberlanjutan dalam Industri Migas</string>
	<string name="txt_skip" translatable="false">Skip</string>
	<string name="next">lanjut</string>
	<string name="home">Utama</string>
	<string name="well">Sumur</string>
	<string name="report">Laporan Pemantauan Sumur</string>
	<string name="user">Pengguna</string>
	<string name="account">Akun Anda</string>
	<string name="txt_welcome">Selamat Datang Kembali!</string>
	<string name="text_sub_login">Ayo masuk untuk mengakses seluruh fitur aplikasi!</string>
	<string name="txt_btn_google">masuk dengan google</string>
	<string name="txt_btn_login_email">masuk dengan email</string>
	<string name="txt_forget_password">Lupa kata sandi?</string>
	<string name="txt_title_forget_password">Lupa Kata Sandi</string>
	<string name="sub_title_reset_password">Silahkan isi alamat email anda</string>
	<string name="txt_placeholder_phone">080099787766</string>
	<string name="txt_sub_title_fragment_login">Isi kredensial email Anda untuk masuk ke dalam aplikasi</string>
	<string name="txt_login">masuk</string>
	<string name="txt_email">Email</string>
	<string name="txt_phone">Telepon</string>
	<string name="txt_all_well">Semua sumur</string>
	<string name="txt_see_all">Lihat semua</string>
	<string name="txt_new_report">Laporan terbaru</string>
	<string name="txt_title_user">Pengguna</string>
	<string name="txt_title_report">Laporan</string>
	<string name="txt_title_well">Sumur</string>
	<string name="txt_title_manage_user">Tambah Pengguna</string>
	<string name="txt_input_user_data">Masukkan data pengguna</string>
	<string name="name">Nama</string>
	<string name="email">Email</string>
	<string name="text_title_detail_well">Detail Sumur</string>
	<string name="txt_placeholder_title_well">Judul atau Nama Sumur</string>
	<string name="placeholder_address">Jl. Malikussaleh, Beuringen, Kab. Aceh Utara</string>
	<string name="txt_placeholder_category">Kategori</string>
	<string name="txt_description">Deskripsi Sumur</string>
	<string name="distance">Jarak tempuh</string>
	<string name="traveling_time">Waktu tempuh</string>
	<string name="zero">0</string>
	<string name="txt_total">Total</string>
	<string name="txt_report">Laporan</string>
	<string name="txt_placeholder_result">Hasil</string>
	<string name="txt_all">Semua</string>
	<string name="txt_cat_as">AS (Alur Siwah)</string>
	<string name="txt_cat_jr">JR (Julok Rayeuk)</string>
	<string name="txt_cat_other_well">Other Well (Sumur Tua)</string>
	<string name="txt_title_manage_well">Tambah Data Sumur</string>
	<string name="txt_hint_choose_categories">Pilih kategori</string>
	<string name="txt_well_location">Lokasi sumur</string>
	<string name="marking_location">Tandai lokasi</string>
	<string name="txt_address">Alamat</string>
	<string name="delete">Hapus</string>
	<string name="txt_title_set_location">Tandai Lokasi</string>
	<string name="txt_add">tambah</string>
	<string name="edit">Perbarui</string>
	<string name="txt_back">Kembali</string>
	<string name="placeholder_caution">Ini adalah contoh pemberitahuan yang di set dari fragment</string>
	<string name="txt_status">status</string>
	<string name="txt_active">Aktif</string>
	<string name="txt_non_active">Non-Aktif</string>
	<string name="txt_set_to_active">Set ke aktif</string>
	<string name="txt_set_to_non_active">Set ke non aktif</string>
	<string name="txt_longitude">Longitude</string>
	<string name="txt_latitude">Latitude</string>
	<string name="txt_get_route">dapatkan arah</string>
	<string name="txt_closest_route">Rute Terdekat</string>
	<string name="txt_date">Tanggal</string>
	<string name="txt_route_not_available">Rute tidak ditemukan</string>
	<string name="txt_placeholder_title_report">Ini adalah report utama</string>
	<string name="txt_mine">Milik saya</string>
	<string name="txt_title_manage_report">Tambah Laporan</string>
	<string name="txt_label_til_report">Isi judul laporan</string>
	<string name="txt_label_til_condition">Isi kondisi sumur</string>
	<string name="txt_label_note">Isi catatan atau nama personil</string>
	<string name="text_title_detail_report">Detail Laporan</string>
	<string name="txt_title_condition">Kondisi Sumur</string>
	<string name="txt_title_note">Catatan atau Personil</string>
	<string name="txt_range_date">Rentang tanggal</string>
	<string name="txt_hint_choose_status">Pilih status</string>
	<string name="txt_placeholder_status">Status</string>
</resources>