<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".fragment.SplashFragment">

	<com.google.android.material.imageview.ShapeableImageView
		android:id="@+id/img_splash"
		android:layout_width="match_parent"
		android:layout_height="0sp"
		android:layout_marginHorizontal="16sp"
		android:layout_marginTop="32sp"
		android:contentDescription="@string/img_btn_desc"
		android:scaleType="centerCrop"
		android:src="@drawable/grid_1"
		app:layout_constraintDimensionRatio="1:1"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:shapeAppearanceOverlay="@style/ShapeNormalCorner"
		tools:ignore="VisualLintBounds" />

	<TextView
		android:id="@+id/tv_title"
		android:layout_width="0sp"
		android:layout_height="wrap_content"
		android:layout_marginTop="24sp"
		android:ellipsize="end"
		android:maxLines="3"
		android:text="@string/title_splash_1"
		android:textAlignment="center"
		android:textColor="@color/colorPrimaryDark"
		android:textSize="22sp"
		android:textStyle="bold"
		app:layout_constraintEnd_toEndOf="@id/img_splash"
		app:layout_constraintStart_toStartOf="@id/img_splash"
		app:layout_constraintTop_toBottomOf="@id/img_splash"
		tools:ignore="VisualLintOverlap,VisualLintBounds" />

	<TextView
		android:id="@+id/tv_sub_title"
		android:layout_width="0sp"
		android:layout_height="wrap_content"
		android:layout_marginTop="16sp"
		android:ellipsize="end"
		android:maxLines="6"
		android:text="@string/sub_title_splash_1"
		android:textAlignment="center"
		android:textColor="@color/text_transparent"
		android:textSize="16sp"
		app:layout_constraintEnd_toEndOf="@id/img_splash"
		app:layout_constraintStart_toStartOf="@id/img_splash"
		app:layout_constraintTop_toBottomOf="@id/tv_title"
		tools:ignore="VisualLintBounds" />

</androidx.constraintlayout.widget.ConstraintLayout>