<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".fragment.ResetPasswordFragment">

	<View
		android:id="@+id/line_top"
		android:layout_width="100dp"
		android:layout_height="5dp"
		android:layout_gravity="center_horizontal"
		android:layout_marginTop="6dp"
		android:background="@drawable/line_bg"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/tv_title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="16sp"
		android:text="@string/title_reset_password"
		android:textColor="@color/black"
		android:textSize="20sp"
		android:textStyle="bold"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/line_top" />

	<TextView
		android:id="@+id/tv_label"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="16sp"
		android:layout_marginTop="32dp"
		android:gravity="center"
		android:hint="@string/txt_placeholder_reset_password"
		android:textColor="@color/text_transparent"
		android:textSize="14sp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/tv_title" />

	<com.google.android.material.button.MaterialButton
		android:id="@+id/btn_next"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="16sp"
		android:layout_marginTop="20sp"
		android:backgroundTint="@color/colorPrimaryDark"
		android:paddingVertical="16sp"
		android:text="@string/txt_next"
		android:textColor="@color/white"
		android:visibility="visible"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/tv_label"
		tools:ignore="VisualLintOverlap,VisualLintBounds,VisualLintButtonSize" />

	<ProgressBar
		android:id="@+id/progressbar"
		style="@android:style/Widget.Holo.Light.ProgressBar.Inverse"
		android:layout_width="0sp"
		android:layout_height="0dp"
		android:layout_marginVertical="5dp"
		android:background="@drawable/bg_btn_primary_dark"
		android:padding="6sp"
		android:visibility="gone"
		app:layout_constraintBottom_toBottomOf="@id/btn_next"
		app:layout_constraintEnd_toEndOf="@id/btn_next"
		app:layout_constraintStart_toStartOf="@id/btn_next"
		app:layout_constraintTop_toTopOf="@id/btn_next" />

	<TextView
		android:id="@+id/tv_close"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="16sp"
		android:text="@string/txt_close"
		android:textColor="@color/red"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/btn_next" />

	<View
		android:id="@+id/spacer"
		android:layout_width="match_parent"
		android:layout_height="720sp"
		android:layout_marginTop="48sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/tv_close"
		tools:ignore="VisualLintBounds" />

</androidx.constraintlayout.widget.ConstraintLayout>