<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools">

	<data>

		<variable
			name="currentWellRef"
			type="com.google.firebase.firestore.DocumentReference" />

		<variable
			name="wellItem"
			type="com.medco.trackingapp.model.WellItem" />
	</data>

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="256sp"
		android:layout_height="wrap_content"
		android:layout_marginStart="16sp"
		android:background="@drawable/state_select_soft_primary_dark">

		<com.google.android.material.imageview.ShapeableImageView
			android:id="@+id/img_well"
			wellImageSource="@{wellItem}"
			android:layout_width="0sp"
			android:layout_height="0sp"
			android:layout_margin="12sp"
			android:background="@color/dark_white"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintDimensionRatio="1:1"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:shapeAppearanceOverlay="@style/ShapeNormalCorner"
			tools:ignore="ImageContrastCheck" />

		<TextView
			android:id="@+id/tv_title"
			android:layout_width="0sp"
			android:layout_height="wrap_content"
			android:layout_margin="12sp"
			android:ellipsize="end"
			android:hint="@string/txt_placeholder_title_well"
			android:maxLines="1"
			android:text='@{wellItem.name}'
			android:textColor="@color/black"
			android:textSize="14sp"
			android:textStyle="bold"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toEndOf="@id/img_well"
			app:layout_constraintTop_toTopOf="parent" />

		<TextView
			android:id="@+id/tv_total_report"
			setTotalReportTv="@{currentWellRef}"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="12sp"
			android:layout_marginTop="6sp"
			android:drawablePadding="4sp"
			android:gravity="center_vertical"
			android:hint="@string/txt_title_report"
			android:textColor="@color/colorPrimaryDark"
			android:textColorHint="@color/colorPrimaryDark"
			android:textSize="10sp"
			app:drawableStartCompat="@drawable/baseline_groups_3_18"
			app:drawableTint="@color/colorPrimaryDark"
			app:layout_constraintStart_toEndOf="@id/img_well"
			app:layout_constraintTop_toBottomOf="@id/tv_title"
			tools:ignore="SmallSp,TextContrastCheck" />

		<TextView
			android:id="@+id/tv_date"
			formatTimestampTv="@{wellItem.createdAt}"
			android:layout_width="0sp"
			android:layout_height="wrap_content"
			android:layout_marginStart="10sp"
			android:layout_marginTop="4sp"
			android:layout_marginEnd="12sp"
			android:layout_marginBottom="12sp"
			android:drawablePadding="4sp"
			android:ellipsize="end"
			android:gravity="center_vertical"
			android:hint="@string/txt_placeholder_date"
			android:maxLines="1"
			android:textColor="@color/text_transparent"
			android:textSize="10sp"
			app:drawableStartCompat="@drawable/baseline_event_18"
			app:drawableTint="@color/text_transparent"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toEndOf="@id/img_well"
			app:layout_constraintTop_toBottomOf="@id/tv_total_report"
			tools:ignore="SmallSp" />

	</androidx.constraintlayout.widget.ConstraintLayout>
</layout>